* Sun Oct 21 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.2.0-0
- Added a nfs::client::mount::ensure parameter to allow users to set the state
  of the mountpoints

* Thu Jul 12 2018 Nick Miller <nick.miller@onyxpoint.com> - 6.2.0-0
- Added OEL and Puppet 5 support
- Change rpcbind service name on EL7 from `rpcbind.socket` to,
  `rpcbind.service`, but only on EL7.4+
- Changed all packages ensure parameter from 'latest' to 'installed'
  - They also respect `simp_options::package_ensure`
  - Added $nfs::install::tools_ensure and $nfs::lvm2::ensure

* Thu Jun 14 2018 Nick Miller <nick.miller@onyxpoint.com> - 6.1.1-0
- Update systemd fixtures and CI assets
- Add logging for exportfs failures
- Ensure that reexports happen after the NFS service has been started

* Mon Apr 16 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.1.1-0
- Added `nfs::client::mount::autodetect_remote` to override all autodetection
  of whether or not the remote host was the current NFS server so an NFS
  server can mount NFS directories from other servers.
- Added `nfs::client::mount::stunnel` to allow users to dictate the stunnel
  connection state for specific mounts.

* Wed Apr 04 2018 Nick Miller <nick.miller@onyxpoint.com> - 6.1.1-0
- On systemd systems, the stunnel service is now a dependency of the NFS
  servers and mounts managed by this module.

* Mon Feb 12 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.0-0
- Update upperbound on puppetlabs/concat version to < 5.0.0

* Wed Dec 13 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.1.0-0
- Changed all stunnel connections to use 'stunnel::instance' methods so that
  they are not interrupted by an issue with the global stunnel configuration
  and they can set the TCP_NODELAY option as suggested for small transaction,
  high bandwidth connections.
- Added parameters to allow users to tweak the stunnel socket options for all
  NFS stunnel connections.
- Added support for OEL and Puppet 5
